init soa refactoring